# avr_Libpca

./: .gitignore  CMakeLists.txt  PcaConfig.cmake.in  PcaConfigVersion.cmake.in  adc_01_8c-example.html  adc_8c.html  adc_8c.js  adc_8c_source.html  adc_8h.html  adc_8h.js  adc_8h_source.html  annotated.html  annotated.js  beeper_01_8c-example.html  beeper_02_8c-example.html  beeper_8c.html  beeper_8c.js  beeper_8c_source.html  beeper_8h.html  beeper_8h.js  beeper_8h_source.html  bus_8h.html  bus_8h.js  bus_8h_source.html  classes.html  common_8c.html  common_8c.js  common_8c_source.html  common_8h.html  common_8h.js  common_8h_source.html  config_8h.html  config_8h.js  config_8h_source.html  d7seg_8c-example.html  dev__d7seg_8c.html  dev__d7seg_8c.js  dev__d7seg_8c_source.html  dev__d7seg_8h.html  dev__d7seg_8h.js  (+215 more)
___old_reference/include/: common.h  config.h  serial.h
___old_reference/src/: common.c  serial.c
include/: _spi_common.h  _usart_common.h  _usart_map.h  _usart_stats.h  gpio.h  serial.h  serial_poll.h  tmp36.h  usart.h  usart_map.h
include/config/: README.md  serial.h  usart.h
include/util/: compiler.h  mem.h  util.h
include/version/: version.h.in
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_5f.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_67.js  all_69.js  all_6f.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5f.js  defines_0.js  defines_1.js  defines_10.js  (+88 more)
src/: CMakeLists.txt  _usart_common.c  _usart_stats.c  gpio.h  ring.h  serial.c  serial.h  tmp36.h  usart.c
src/util/: util.c
